# Estructura-de-Datos

Fraccion/: Fraccion.cpp  Fraccion.h  main.cpp
Listas_Bryan_Victoria/Listas_Bryan_Victoria/: Lista_Simple.cpp  Lista_Simple.h  Main.cpp  Nodo.h  Persona.cpp  Persona.h  ValidarPersona.cpp  ValidarPersona.h  guardado_txt.cpp  guardado_txt.h  personas_lista.txt
Matriz/: matrizMejorado.cpp  nuevaMatriz.cpp
Matriz/Matriz templates/: Matriz.cpp  Matriz.h  mainMatriz.cpp
MatrizDLL/: CMakeLists.txt  Main.cpp  MatrizDLL.cpp  MatrizDLL.h  matrizLambda.cpp  matrizLambda.h
TIPOS RECURSIVIDAD/: Recursividad con cola.cpp  Recursividad de no cola.cpp  RecursividadAnidada.cpp  RecursividadIndirecta.cpp  RecursividadMultiple.cpp  RecursividadMutua.cpp  RecursividadSimple.cpp
proyecto_libreria/proyecto_libreria/: Autor.cpp  Autor.h  Libro.cpp  Libro.h  ListaCircularDoble.cpp  ListaCircularDoble.h  Nodo.h  Validaciones.cpp  Validaciones.h  autores.txt  libros.txt  main.cpp
proyecto_libreria/proyecto_libreria/respaldos/: respaldo_2024-12-11_05-52.txt  respaldo_2024-12-11_11-09.txt
verificacion/: Verificaciones.cpp  main.cpp  verificacion.h
